# smart-voice-assistant

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG_README_UPDATE.md  Dockerfile  Dockerfile.omnilingual  ELASTICSEARCH_INTEGRATION.md  FAQ_VERIFICATION_REPORT_CHARGOONEH_NEXTCLOUD.md  FAQ_VERIFICATION_REPORT_PERIPHERALS.md  FAQ_VERIFICATION_REPORT_SYSTEM_PERFORMANCE.md  FIXES_APPLIED.md  PROJECT_STRUCTURE_IMPROVEMENTS.md  README.md  RECORDING_SYNC_FIX_SUMMARY.md  REFACTORING_SUMMARY.md  ROADMAP.md  STRUCTURE_SUMMARY.md  coverage.xml  docker-compose.omnilingual.yml  docker-compose.yml  docker-entrypoint.sh  elasticsearch_client.py  fix-permissions.sh  lang_check.py  main.py  pyproject.toml  pytest.ini  register_bot.py  requirements.txt  run_tests.py  setup_wsl.sh  test_batch.py  test_connectivity.py  test_elasticsearch.py  test_intent_classifier.py  ync asr pipeline for calls
.github/workflows/: ci.yml  release.yml
assets/audio/: README.md  waiting_voice.wav:Zone.Identifier  welcome_voice.m4a
docs/: ANY_CALL_REFACTOR.md  ASR_MIGRATION_GUIDE.md  ASR_QUICK_REFERENCE.md  AUDIO_PLAYBACK.md  CONFIGURATION.md  DOCKER_INTERACTIVE_GUIDE.md  DOCKER_QUICK_START.md  DOCKER_SETUP_GUIDE.md  DOCKER_TROUBLESHOOTING.md  DUAL_ENVIRONMENT_GUIDE.md  ELASTICSEARCH.md  FIXES_APPLIED.md  GETTING_STARTED.md  INFERENCE_TIME_GUIDE.md  INTENT_CLASSIFICATION_IMPLEMENTATION_GUIDE.md  MODEL_CACHE_GUIDE.md  OMNILINGUAL_ASR_OPTIONS.md  OMNILINGUAL_ASR_SETUP.md  OMNILINGUAL_ASR_SUMMARY.md  PROJECT_STRUCTURE_IMPROVEMENTS.md  RASA_INTEGRATION_GUIDE.md  RECORDING_FORMAT_FIX.md  SETUP_INDEX.md  STRUCTURE_SUMMARY.md  TECHNICAL_DETAILS.md  TESTING.md  TESTING_PJSUA2_CALL_MONITORING.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  VAD_ARCHITECTURE.md  VOICE_CAPTURE_IMPLEMENTATION.md  VOICE_RECORDING.md  WSL_QUICK_START.md  WSL_SETUP_GUIDE.md
docs/reports/: FAQ_VERIFICATION_REPORT.md  FAQ_VERIFICATION_REPORT_EMAIL_MEETINGS.md  FAQ_VERIFICATION_REPORT_GENERAL_SOFTWARE.md  FAQ_VERIFICATION_REPORT_NETWORK_INTERNET.md
examples/: asr_usage_example.py  measure_inference_time.py  omnilingual_asr_example.py  timing_utils.py  verify_cache.py
infrastructure/: README.md
infrastructure/freepbx/: README.md  docker-compose.yml
infrastructure/kibana/dashboard/: smart-voice-assistance.ndjson
infrastructure/kibana/data-views/: pjsua-calls.ndjson
infrastructure/nginx/: docker-compose.yml  nginx.conf  readme.md
infrastructure/voip/: docker-compose.yml
rasa-integration/: .gitignore  PHASE1_STATUS.md  README.md  install-python3.10.sh  setup.sh
scripts/: check_ollama.py  debug_cache.py  demo_intent_classifier.py  demo_tests.py  docker-build.ps1  docker-run.ps1  run_tests.py  setup_windows.ps1  test_connectivity.py  test_elasticsearch.py  test_intent_classifier.py
scripts/maintenance/: fix-permissions.sh  push_to_github.sh
src/: __init__.py
src/pjsua_bot/: __init__.py  account.py  account_setup.py  asr.py  asr_omnilingual.py  calls.py  cleanup.py  config.py  elasticsearch_client.py  endpoint.py  mwe_register.py  register_bot.py  registration.py  services.py  shutdown.py  utils.py  vad.py
src/pjsua_bot/calls/: __init__.py  any_call.py  goodbye.py  out_call.py  recording_cleanup.py
src/pjsua_bot/calls/mixins/: __init__.py  asr_support.py  call_media_handler.py  call_state_handler.py  conversation_flow.py  event_logger.py  intent_handler.py  playback_monitor.py
src/pjsua_bot/intent/: __init__.py  classifier.py  faq_config.py  ollama_classifier.py
src/pjsua_bot/vad/: __init__.py  audio_preprocessor.py  audio_reader.py  chunk_manager.py  config.py  inference_engine.py  silence.py  silero.py  silero_diagnostics.py  silero_model_loader.py  throttled_logger.py  types.py
tests/: __init__.py  conftest.py  test_account.py  test_any_call.py  test_asr.py  test_asr_helpers.py  test_asr_migration.py  test_asr_omnilingual.py  test_asr_support_mixin.py  test_batch.py  test_elasticsearch_client.py  test_elasticsearch_extended.py  test_event_logger_mixin.py  test_faq_config.py  test_goodbye.py  test_intent_classifier.py  test_intent_handler_mixin.py  test_intent_phase1.py  test_main.py  test_mwe_register.py  test_ollama_classifier.py  test_omnilingual.py  test_out_call.py  test_qa_satisfaction_flow.py  test_setup.py  test_utils.py  test_vad_config.py  test_vad_types.py
